--- a/themes/perevozkin/sass/_my-page.scss
+++ b/themes/perevozkin/sass/_my-page.scss
@@ -185,7 +185,7 @@
 	}
 }
 
-.my-contact-info-company-edit {
+.contact-info-edit {
 	.phones {
 		li {
 			padding-left: 25px;
@@ -260,7 +260,7 @@
 	
 	
 		
-	.my-contact-info-company-list {
+	.contact-info-list {
 		
 		
 		p {
