--- a/themes/perevozkin/sass/_common1.scss
+++ b/themes/perevozkin/sass/_common1.scss
@@ -93,6 +93,8 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 
 .table-cell { @extend %dtc; }
 
+.m-0-15 { margin: 0 15px; }
+
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
 .mb-15 { margin-bottom: 15px; }
@@ -109,6 +111,7 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 .mt-40 { margin-top: 40px; }
 
 
+.p-0 { padding: 0; }
 .p-10 { padding: 10px; }
 .p-15 { padding: 15px; }
 .p-20 { padding: 20px; }
