--- a/themes/perevozkin/css/screen.css
+++ b/themes/perevozkin/css/screen.css
@@ -1189,6 +1189,10 @@ h3, .add-transport p, .my-transport-name {
   font-size: 30px;
 }
 
+.font-32 {
+  font-size: 32px;
+}
+
 .benefits-block .header {
   font-size: 36px;
 }
@@ -1205,7 +1209,7 @@ h1 span, .step-container .num-step {
   font-size: 48px;
 }
 
-button.close, .my-last-requests-title span, .my-last-requests-title a, .bids-filter .lbl-block, .bid-detail-date-quickly-val, .deal-transport-item .ico, #transport-form .normal {
+button.close, .normal, .my-last-requests-title span, .my-last-requests-title a, .bids-filter .lbl-block, .bid-detail-date-quickly-val, .deal-transport-item .ico, #transport-form .normal {
   font-weight: normal;
 }
 
@@ -2087,10 +2091,6 @@ button.close:hover {
   top: 2px;
 }
 
-.normal {
-  @extens %normal;
-}
-
 .tahoma {
   font-family: Tahoma, Arial;
 }
@@ -2151,6 +2151,10 @@ button.close:hover {
   margin-top: 40px;
 }
 
+.ml-5 {
+  margin-left: 5px;
+}
+
 .p-0 {
   padding: 0;
 }
@@ -2169,6 +2173,10 @@ button.close:hover {
 
 .p-25 {
   padding: 25px;
+}
+
+.p-0-5 {
+  padding: 0 5px;
 }
 
 .p-0-10 {
@@ -2195,6 +2203,10 @@ button.close:hover {
   padding-top: 10px;
 }
 
+.pt-25 {
+  padding-top: 25px;
+}
+
 .pb-5 {
   padding-bottom: 5px;
 }
@@ -2209,6 +2221,14 @@ button.close:hover {
 
 .pb-20 {
   padding-bottom: 20px;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pl-0 {
+  padding-left: 0;
 }
 
 .pl-10 {
