--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -53,6 +53,7 @@
 %font_24 { font-size: 24px; }
 %font_28 { font-size: 28px; }
 %font_30 { font-size: 30px; }
+%font_32 { font-size: 32px; }
 %font_36 { font-size: 36px; }
 %font_37 { font-size: 37px; }
 %font_46 { font-size: 46px; }
