--- a/themes/perevozkin/sass/_common1.scss
+++ b/themes/perevozkin/sass/_common1.scss
@@ -94,6 +94,7 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 
 .table-cell { @extend %dtc; }
 
+.m-0-5 { margin: 0 5px; }
 .m-0-15 { margin: 0 15px; }
 
 .mb-5 { margin-bottom: 5px; }
@@ -125,6 +126,8 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 .p-0-15 { padding: 0 15px; }
 .p-0-20 { padding: 0 20px; }
 
+.p-20-0 { padding: 20px 0; }
+
 .p-10-0 { padding: 10px 0; }
 
 .pt-5 { padding-top: 5px; }
@@ -139,6 +142,7 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 .pr-0 { padding-right: 0; }
 
 .pl-0 { padding-left: 0; }
+.pl-5 { padding-left: 5px; }
 .pl-10 { padding-left: 10px; }
 .pl-20 { padding-left: 20px; }
 .pl-30 { padding-left: 30px; }
@@ -159,9 +163,10 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 .bg_f4fbfe {background-color: #f4fbfe; }
 .bg_fff {background-color: #fff; }
 
-.bb-dotted-1 {
-	border-bottom: 1px dotted #2e3c54;
-}
+.bb-dotted-1 { border-bottom: 1px dotted #2e3c54; }
+.bb-dotted-1-h { @extend .bb-dotted-1; &:hover { border-bottom: none; } }
+.bb-dotted-2 { border-bottom: 1px dotted #71a72c; }
+.bb-dotted-2-h { @extend .bb-dotted-2; &:hover { border-bottom: none; } }
 
 .ov-hidden { overflow: hidden;}
 
