--- a/themes/perevozkin/sass/_common.scss
+++ b/themes/perevozkin/sass/_common.scss
@@ -803,7 +803,7 @@ button.close {
 		margin-top: 19px;
 	}
 }
-
+/*
 .review-value-good img {
 	top: 2px;
 
@@ -811,3 +811,4 @@ button.close {
 .review-value-bad img {
 	top: 14px;
 }
+*/
