--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -31,6 +31,7 @@
 %c_c3c8cd { color: #c3c8cd; }
 %c_cbe0eb { color: #cbe0eb; }
 %c_ccd3d7 { color: #ccd3d7; }
+%c_d0daea { color: #d0daea; }
 %c_eb4c4c { color: #eb4c4c; }
 %c_de5151 { color: #de5151; }
 %c_fcb60e { color: #fcb60e; }
